[gd_scene load_steps=7 format=2]

[ext_resource path="res://FallingFire.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/fireball-lion.png-8f1a91095446d4ed3d5773c124ecc290.stex"

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.827214, 0.911447 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/fireball-lion.png-8f1a91095446d4ed3d5773c124ecc290.stex"

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.827214, 0.911447 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=5]

[node name="FallingFire" type="Node2D"]
script = ExtResource( 1 )

[node name="FireParticles" type="CPUParticles2D" parent="."]
z_index = 2
amount = 50
lifetime = 0.4
lifetime_randomness = 0.78
texture = SubResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
direction = Vector2( 0, -1 )
spread = 12.01
gravity = Vector2( 0, 0 )
initial_velocity = 85.19
color_ramp = SubResource( 2 )

[node name="FireParticles2" type="CPUParticles2D" parent="."]
z_index = 2
emitting = false
amount = 50
one_shot = true
explosiveness = 0.76
lifetime_randomness = 0.78
texture = SubResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
direction = Vector2( 0, -1 )
spread = 45.95
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -7 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
